# ReportingAgent

./: Dockerfile  docker-compose.yml  pyproject.toml
src/api/: main.py  prompt.yaml  tickets.json
src/api/tools/: ticket.py
src/app/: client.py  main.py
src/issue-tracker/: main.py
